--- a/index.html
+++ b/index.html
@@ -163,19 +163,20 @@
   <!-- FONDO lluvia de imágenes -->
   <div class="absolute inset-0 z-0 overflow-hidden pointer-events-none">
     <!-- 10 imágenes animadas cayendo desde arriba y abajo con diferentes delays y posiciones -->
-    <template>
-      <img src="1.png" class="absolute w-40 h-40 object-cover rounded-lg opacity-70 animate-float-down" style="top:-150px; left:10%; animation-delay: 0s;">
-      <img src="2.png" class="absolute w-44 h-44 object-cover rounded-lg opacity-70 animate-float-up" style="bottom:-150px; left:20%; animation-delay: 3s;">
-      <img src="3.png" class="absolute w-36 h-36 object-cover rounded-lg opacity-70 animate-float-down" style="top:-150px; left:35%; animation-delay: 2s;">
-      <img src="4.png" class="absolute w-40 h-40 object-cover rounded-lg opacity-70 animate-float-up" style="bottom:-150px; left:50%; animation-delay: 1s;">
-      <img src="5.png" class="absolute w-48 h-48 object-cover rounded-lg opacity-70 animate-float-down" style="top:-150px; left:65%; animation-delay: 4s;">
-      <img src="6.png" class="absolute w-40 h-40 object-cover rounded-lg opacity-70 animate-float-up" style="bottom:-150px; left:75%; animation-delay: 2.5s;">
-      <img src="7.png" class="absolute w-36 h-36 object-cover rounded-lg opacity-70 animate-float-down" style="top:-150px; left:85%; animation-delay: 5s;">
-      <img src="8.png" class="absolute w-44 h-44 object-cover rounded-lg opacity-70 animate-float-up" style="bottom:-150px; left:90%; animation-delay: 1.5s;">
-      <img src="9.png" class="absolute w-40 h-40 object-cover rounded-lg opacity-70 animate-float-down" style="top:-150px; left:5%; animation-delay: 3.5s;">
-      <img src="10.png" class="absolute w-48 h-48 object-cover rounded-lg opacity-70 animate-float-up" style="bottom:-150px; left:40%; animation-delay: 0.5s;">
-    </template>
+   <div>
+  <img src="1.png" class="absolute w-40 h-40 object-cover rounded-lg opacity-70 animate-float-down" style="top:-150px; left:10%; animation-delay: 0s;">
+  <img src="2.png" class="absolute w-44 h-44 object-cover rounded-lg opacity-70 animate-float-up" style="bottom:-150px; left:20%; animation-delay: 3s;">
+  <img src="3.png" class="absolute w-36 h-36 object-cover rounded-lg opacity-70 animate-float-down" style="top:-150px; left:35%; animation-delay: 2s;">
+  <img src="4.png" class="absolute w-40 h-40 object-cover rounded-lg opacity-70 animate-float-up" style="bottom:-150px; left:50%; animation-delay: 1s;">
+  <img src="5.png" class="absolute w-48 h-48 object-cover rounded-lg opacity-70 animate-float-down" style="top:-150px; left:65%; animation-delay: 4s;">
+  <img src="6.png" class="absolute w-40 h-40 object-cover rounded-lg opacity-70 animate-float-up" style="bottom:-150px; left:75%; animation-delay: 2.5s;">
+  <img src="7.png" class="absolute w-36 h-36 object-cover rounded-lg opacity-70 animate-float-down" style="top:-150px; left:85%; animation-delay: 5s;">
+  <img src="8.png" class="absolute w-44 h-44 object-cover rounded-lg opacity-70 animate-float-up" style="bottom:-150px; left:90%; animation-delay: 1.5s;">
+  <img src="9.png" class="absolute w-40 h-40 object-cover rounded-lg opacity-70 animate-float-down" style="top:-150px; left:5%; animation-delay: 3.5s;">
+  <img src="10.png" class="absolute w-48 h-48 object-cover rounded-lg opacity-70 animate-float-up" style="bottom:-150px; left:40%; animation-delay: 0.5s;">
+</div>
   </div>
+
 
   <!-- CAPA de contenido sobre fondo -->
   <div class="relative z-10 container mx-auto px-4 text-center text-white">
