--- a/index.html
+++ b/index.html
@@ -96,12 +96,13 @@
     <header class="fixed top-0 left-0 right-0 z-50 bg-white shadow-md">
         <div class="container mx-auto px-4 py-3">
             <div class="flex items-center justify-between">
-                <!-- Logo -->
-                <div class="flex items-center">
-                    <h1 class="text-3xl font-['Pacifico'] text-primary">D'tonys</h1>
-                    <span class="ml-2 text-xs text-gray-500">Desde 1989</span>
-                </div>
-                
+               <!-- Logo -->
+<div class="flex items-center space-x-2">
+    <h1 class="text-3xl font-['Pacifico'] text-primary">D'tonys</h1>
+    <span class="text-xs text-gray-500">Desde 1989</span>
+    <img src="Logo.png" alt="Logo" class="w-10 h-auto ml-2">
+</div>
+
                 <!-- Desktop Navigation -->
                 <nav class="hidden md:flex items-center space-x-6">
                     <a href="#home" class="text-gray-700 hover:text-primary font-medium transition-colors">Inicio / Home</a>
