--- a/index.html
+++ b/index.html
@@ -630,40 +630,6 @@
             </div>
         </div>
     </section>
-    <!-- Gallery Section -->
-    <section id="gallery" class="py-16 md:py-24 bg-white">
-        <div class="container mx-auto px-4">
-            <div class="text-center mb-12">
-                <h2 class="text-3xl md:text-4xl font-bold text-primary mb-2">
-                    <span class="spanish">Galería</span>
-                    <span class="english hidden">Gallery</span>
-                </h2>
-                <div class="w-24 h-1 bg-secondary mx-auto"></div>
-            </div>
-            
-            <div class="gallery-grid">
-                <div class="gallery-item rounded-lg overflow-hidden shadow-md hover:shadow-lg transition-shadow">
-                    <img src="https://readdy.ai/api/search-image?query=Mediterranean%20seafood%20paella%20with%20saffron%20rice%2C%20shrimp%2C%20mussels%2C%20and%20vegetables%20on%20a%20traditional%20pan%2C%20served%20in%20a%20Spanish%20coastal%20restaurant%2C%20bright%20natural%20lighting%2C%20appetizing%20colors%2C%20professional%20food%20photography&width=400&height=300&seq=4&orientation=landscape" alt="Paella" class="w-full h-64 object-cover object-top">
-                </div>
-                <div class="gallery-item rounded-lg overflow-hidden shadow-md hover:shadow-lg transition-shadow">
-                    <img src="https://readdy.ai/api/search-image?query=Authentic%20Italian%20wood-fired%20pizza%20with%20melted%20mozzarella%2C%20fresh%20basil%2C%20and%20tomato%20sauce%2C%20thin%20crispy%20crust%2C%20served%20in%20a%20traditional%20Spanish-Italian%20restaurant%2C%20steam%20rising%2C%20appetizing%20presentation&width=400&height=300&seq=5&orientation=landscape" alt="Pizza" class="w-full h-64 object-cover object-top">
-                </div>
-                <div class="gallery-item rounded-lg overflow-hidden shadow-md hover:shadow-lg transition-shadow">
-                    <img src="https://readdy.ai/api/search-image?query=Colorful%20artisanal%20gelato%20display%20in%20waffle%20cones%2C%20multiple%20flavors%20including%20pistachio%2C%20chocolate%2C%20strawberry%2C%20and%20vanilla%2C%20Spanish%20ice%20cream%20parlor%20setting%2C%20bright%20cheerful%20presentation&width=400&height=300&seq=6&orientation=landscape" alt="Ice Cream" class="w-full h-64 object-cover object-top">
-                </div>
-                <div class="gallery-item rounded-lg overflow-hidden shadow-md hover:shadow-lg transition-shadow">
-                    <img src="https://readdy.ai/api/search-image?query=Mediterranean%20restaurant%20terrace%20with%20sea%20view%2C%20outdoor%20dining%20area%20with%20blue%20and%20white%20decor%2C%20umbrellas%2C%20customers%20enjoying%20meals%2C%20sunny%20day%20in%20Spanish%20coastal%20town%2C%20relaxed%20vacation%20atmosphere&width=400&height=300&seq=7&orientation=landscape" alt="Restaurant Terrace" class="w-full h-64 object-cover object-top">
-                </div>
-                <div class="gallery-item rounded-lg overflow-hidden shadow-md hover:shadow-lg transition-shadow">
-                    <img src="https://readdy.ai/api/search-image?query=Freshly%20prepared%20Spanish%20tapas%20selection%20including%20patatas%20bravas%2C%20gambas%20al%20ajillo%2C%20and%20croquetas%2C%20served%20on%20rustic%20wooden%20boards%2C%20restaurant%20presentation%2C%20warm%20lighting%2C%20appetizing%20close-up&width=400&height=300&seq=8&orientation=landscape" alt="Tapas" class="w-full h-64 object-cover object-top">
-                </div>
-                <div class="gallery-item rounded-lg overflow-hidden shadow-md hover:shadow-lg transition-shadow">
-                    <img src="https://readdy.ai/api/search-image?query=Traditional%20Spanish%20dessert%20platter%20with%20flan%2C%20churros%20with%20chocolate%2C%20and%20crema%20catalana%2C%20decorative%20presentation%2C%20restaurant%20setting%2C%20warm%20inviting%20colors%2C%20sweet%20treats%20display&width=400&height=300&seq=9&orientation=landscape" alt="Desserts" class="w-full h-64 object-cover object-top">
-                </div>
-            </div>
-        </div>
-    </section>
-
    <section id="contact" class="py-16 md:py-24 bg-gray-50">
   <div class="max-w-screen-lg mx-auto px-4">
     <!-- Título -->
@@ -720,7 +686,17 @@
               <p class="text-gray-600">968 15 34 36</p>
             </div>
           </div>
-
+             <!-- social -->
+<div class="mt-6 flex flex-wrap justify-start gap-3">
+  <a href="https://www.instagram.com/dtonys_" target="_blank" class="flex items-center space-x-2 bg-white text-primary px-4 py-2 rounded-button shadow hover:bg-gray-100">
+    <i class="ri-instagram-fill"></i>
+    <span>@dtonys_</span>
+  </a>
+  <a href="https://www.facebook.com/D'tonys Puerto de Mazarrón" target="_blank" class="flex items-center space-x-2 bg-white text-primary px-4 py-2 rounded-button shadow hover:bg-gray-100">
+    <i class="ri-facebook-fill"></i>
+    <span>D'tonys Puerto de Mazarrón</span>
+  </a>
+</div>
           <!-- Horario -->
           <div class="flex items-start">
             <i class="ri-time-line text-primary text-xl mt-1 mr-4"></i>
