--- a/index.html
+++ b/index.html
@@ -256,31 +256,29 @@
             </div>
             
             <!-- Menu Tabs -->
-            <div class="flex flex-wrap justify-center mb-8">
-                <div class="bg-white rounded-full shadow-md p-1 flex">
-                    <button class="menu-tab active px-4 py-2 rounded-full whitespace-nowrap transition-colors" data-tab="food">
-                        <span class="spanish">Comida</span>
-                        <span class="english hidden">Food</span>
-                    </button>
-                    <button class="menu-tab px-4 py-2 rounded-full whitespace-nowrap transition-colors" data-tab="pizzas">
-                        <span class="spanish">Pizzas</span>
-                        <span class="english hidden">Pizzas</span>
-                    </button>
-                    <button class="menu-tab px-4 py-2 rounded-full whitespace-nowrap transition-colors" data-tab="icecream">
-                        <span class="spanish">Helados</span>
-                        <span class="english hidden">Ice Cream</span>
-                    </button>
-                    <button class="menu-tab px-4 py-2 rounded-full whitespace-nowrap transition-colors" data-tab="drinks">
-                        <span class="spanish">Bebidas</span>
-                        <span class="english hidden">Drinks</span>
-                    </button>
-                    <button class="menu-tab px-4 py-2 rounded-full whitespace-nowrap transition-colors" data-tab="desserts">
-                        <span class="spanish">Postres</span>
-                        <span class="english hidden">Desserts</span>
-                    </button>
-                </div>
-            </div>
-            
+            <div class="grid grid-cols-2 sm:grid-cols-3 gap-3 justify-center max-w-md mx-auto my-6">
+  <button class="menu-tab px-4 py-2 border-2 border-primary text-primary rounded-full hover:bg-primary hover:text-white transition" data-tab="food">
+    <span class="spanish">Comida</span>
+    <span class="english hidden">Food</span>
+  </button>
+  <button class="menu-tab px-4 py-2 border-2 border-primary text-primary rounded-full hover:bg-primary hover:text-white transition" data-tab="pizzas">
+    <span class="spanish">Pizzas</span>
+    <span class="english hidden">Pizzas</span>
+  </button>
+  <button class="menu-tab px-4 py-2 border-2 border-primary text-primary rounded-full hover:bg-primary hover:text-white transition" data-tab="icecream">
+    <span class="spanish">Helados</span>
+    <span class="english hidden">Ice Cream</span>
+  </button>
+  <button class="menu-tab px-4 py-2 border-2 border-primary text-primary rounded-full hover:bg-primary hover:text-white transition" data-tab="drinks">
+    <span class="spanish">Bebidas</span>
+    <span class="english hidden">Drinks</span>
+  </button>
+  <button class="menu-tab px-4 py-2 border-2 border-primary text-primary rounded-full hover:bg-primary hover:text-white transition" data-tab="desserts">
+    <span class="spanish">Postres</span>
+    <span class="english hidden">Desserts</span>
+  </button>
+</div>
+
             <!-- Menu Content -->
             <div class="bg-white rounded-lg shadow-md p-6">
                 <!-- Food Tab -->
